--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <section>
             <h2>Student Photo</h2>
-            <img src="images/profile.webp" alt="Student Photo">
+            <img src="images/profile.webp" alt="Student Profile">
         </section>
 
         <section id="courses">
