--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>WDD231 Home Page | Jacob Nielsen</title>
     <meta name="description" content="Home page for WDD231 assignments">
     <meta name="author" content="Jacob Nielsen">
+    <meta property="og:title" content="WDD231">
+    <meta property="og:description" content="Home page for WDD231 assignments">
+    <meta property="og:image" content="https://jcbcnielsen.github.io/wdd231/images/open_graph.webp">
+    <meta property="og:url" content="https://jcbcnielsen.github.io/wdd231/index.html">
+    <link rel="icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
