Week 2 Edit C - members.json finished

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <meta name="description" content="">
+    <title>Directory | Richmond CoC</title>
+    <meta name="description" content="Directory page for the Richmond Chamber of Commerce">
     <meta name="author" content="Jacob Nielsen">
     <link rel="icon" href="images/favicon.ico">
-    <meta property="og:title" content="">
-    <meta property="og:description" content="">
+    <meta property="og:title" content="Directory - Richmond CoC">
+    <meta property="og:description" content="Directory page for the Richmond Chamber of Commerce">
     <meta property="og:image" content="">
     <meta property="og:url" content="https://jcbcnielsen.github.io/wdd231/chamber/directory.html">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,12 +20,14 @@
     <link rel="stylesheet" href="styles/base-large.css">
     <link rel="stylesheet" href="styles/base-small.css">
     <link rel="stylesheet" href="styles/directory.css">
+    <script src="../scripts/menu.js" defer></script>
+    <script src="../scripts/getdate.js" defer></script>
 </head>
 
 <body>
     <header>
         <img>
-        <h1>Richmond Chamber of Commerce</h1>
+        <h2>Richmond Chamber of Commerce</h2>
         <button id="menu"></button>
         <nav>
             <a>Home</a>
@@ -36,7 +38,7 @@
     </header>
 
     <main>
-
+        <h1>Directory</h1>
     </main>
 
     <footer>
