--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 
     <footer>
         <div class="socialLinks">
-            <a href="https://github.com/jcbcnielsen"><img src="images/github.svg" alt="GitHub Logo"></a>
-            <a href="https://linkedin.com"><img src="images/linkedin.svg" alt="LinkedIn Logo"></a>
-            <a href="https://x.com"><img src="images/x.svg" alt="X/Twitter Logo"></a>
+            <a href="https://github.com/jcbcnielsen"><img src="images/github.svg" alt="GitHub Logo from Icons8"></a>
+            <a href="https://linkedin.com"><img src="images/linkedin.svg" alt="LinkedIn Logo from Icons8"></a>
+            <a href="https://x.com"><img src="images/x.svg" alt="X/Twitter Logo from Icons8"></a>
         </div>
         <p>&copy;<span id="currentYear"></span> | Jacob Nielsen | Virginia, USA</p>
         <p id="lastModified"></p>
