--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -17,8 +17,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/base-large.css">
     <link rel="stylesheet" href="styles/base-small.css">
+    <link rel="stylesheet" href="styles/base-large.css">
     <link rel="stylesheet" href="styles/directory.css">
     <script src="scripts/directory.js" defer></script>
     <script src="../scripts/menu.js" defer></script>
@@ -27,14 +27,14 @@
 
 <body>
     <header>
-        <img>
+        <img src="images/logo.webp" alt="Richmond Chamber of Commerce Logo">
         <h2>Richmond Chamber of Commerce</h2>
         <button id="menu"></button>
         <nav>
-            <a>Home</a>
-            <a>Directory</a>
-            <a>Join</a>
-            <a>Discover</a>
+            <a href="index.html">Home</a>
+            <a href="directory.html" class="here">Directory</a>
+            <a href="join.html">Join</a>
+            <a href="discover.html">Discover</a>
         </nav>
     </header>
 
