--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -29,7 +29,7 @@
     <header>
         <img src="images/logo.webp" alt="Richmond Chamber of Commerce Logo">
         <h2>Richmond Chamber of Commerce</h2>
-        <button id="menu"></button>
+        <button aria-label="menu" id="menu"></button>
         <nav>
             <a href="index.html">Home</a>
             <a href="directory.html" class="here">Directory</a>
@@ -40,7 +40,7 @@
 
     <main>
         <h1>Directory</h1>
-        <button id="view"></button>
+        <button aria-label="view" id="view"></button>
         <div id="companies"></div>
     </main>
 
