--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
             <div id="courseList"></div>
             <p id="credits"></p>
         </section>
+        <dialog id="courseDetails"></dialog>
     </main>
 
     <footer>
