--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | Richmond CoC</title>
-    <meta name="description" content="Home page for the Richmond Chamber of Commerce">
+    <title>Join | Richmond CoC</title>
+    <meta name="description" content="Page for joining the Richmond Chamber of Commerce">
     <meta name="author" content="Jacob Nielsen">
     <link rel="icon" href="images/favicon.ico">
-    <meta property="og:title" content="Home - Richmond CoC">
-    <meta property="og:description" content="Home page for the Richmond Chamber of Commerce">
+    <meta property="og:title" content="Join - Richmond CoC">
+    <meta property="og:description" content="Page for joining the Richmond Chamber of Commerce">
     <meta property="og:image" content="https://jcbcnielsen.github.io/wdd231/chamber/images/chamber-open-graph.webp">
-    <meta property="og:url" content="https://jcbcnielsen.github.io/wdd231/chamber/index.html">
+    <meta property="og:url" content="https://jcbcnielsen.github.io/wdd231/chamber/join.html">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
@@ -19,8 +19,8 @@
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base-small.css">
     <link rel="stylesheet" href="styles/base-large.css">
-    <link rel="stylesheet" href="styles/home.css">
-    <script type="module" src="scripts/home.mjs"></script>
+    <link rel="stylesheet" href="styles/thankyou.css">
+    <script src="scripts/thankyou.js" defer></script>
     <script src="../scripts/menu.js" defer></script>
     <script src="../scripts/getdate.js" defer></script>
 </head>
@@ -31,7 +31,7 @@
         <h2>Richmond Chamber of Commerce</h2>
         <button aria-label="menu" id="menu"></button>
         <nav>
-            <a href="index.html" class="here">Home</a>
+            <a href="index.html">Home</a>
             <a href="directory.html">Directory</a>
             <a href="join.html">Join</a>
             <a href="discover.html">Discover</a>
@@ -39,31 +39,8 @@
     </header>
 
     <main>
-        <picture id="hero">
-            <source srcset="images/hero-large.webp" media="(min-width: 1024px)">
-            <source srcset="images/hero-medium.webp" media="(min-width: 512px)">
-            <img src="images/hero-small.webp" alt="Hero Image">
-            <button aria-label="call to action" id="action">Join Us!</button>
-        </picture>
-        <h1>Home</h1>
-        <div id="news">
-            <div id="events">
-                <h2>Events</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut dicta nulla voluptate fugit hic quo
-                    exercitationem libero quas officia assumenda.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus in nulla rem similique non neque
-                    quam excepturi possimus vitae eveniet.</p>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum accusantium amet doloribus. Facere
-                    temporibus nisi eos placeat cumque, adipisci aliquam?</p>
-            </div>
-            <div id="weather">
-                <h2>Current Weather</h2>
-            </div>
-            <div id="forecast">
-                <h2>Weather Forecast</h2>
-            </div>
-        </div>
-        <div id="spotlight"></div>
+        <h1>Thank You for Joining the Chamber!</h1>
+        <div id="formDetails"></div>
     </main>
 
     <footer>
