--- a/chamber/join.html
+++ b/chamber/join.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Join | Richmond CoC</title>
+    <title>Join Us | Richmond Chamber of Commerce</title>
     <meta name="description" content="Page for joining the Richmond Chamber of Commerce">
     <meta name="author" content="Jacob Nielsen">
     <link rel="icon" href="images/favicon.ico">
