--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Join | Richmond CoC</title>
-    <meta name="description" content="Page for joining the Richmond Chamber of Commerce">
+    <title>Thank You | Richmond CoC</title>
+    <meta name="description" content="Form submittion page for the Richmond Chamber of Commerce">
     <meta name="author" content="Jacob Nielsen">
     <link rel="icon" href="images/favicon.ico">
-    <meta property="og:title" content="Join - Richmond CoC">
-    <meta property="og:description" content="Page for joining the Richmond Chamber of Commerce">
+    <meta property="og:title" content="Thank You - Richmond CoC">
+    <meta property="og:description" content="Form submittion page for the Richmond Chamber of Commerce">
     <meta property="og:image" content="https://jcbcnielsen.github.io/wdd231/chamber/images/chamber-open-graph.webp">
-    <meta property="og:url" content="https://jcbcnielsen.github.io/wdd231/chamber/join.html">
+    <meta property="og:url" content="https://jcbcnielsen.github.io/wdd231/chamber/thankyou.html">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
