--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <button aria-label="menu" id="menu"></button>
         <nav>
             <a class="here" href="index.html">Home</a>
-            <a href="#">Chamber</a>
-            <a href="#">Final</a>
+            <a href="chamber/index.html">Chamber</a>
+            <a href="final/index.html">Final</a>
         </nav>
     </header>
 
