--- a/final/games.html
+++ b/final/games.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sources | F'burg VG Tourney</title>
-    <meta name="description" content="Image sources for the Fredericksburg Video Game Tournament website">
+    <title>Home | F'burg VG Tourney</title>
+    <meta name="description" content="Home page for the Fredericksburg Video Game Tournament website">
     <meta name="author" content="Jacob Nielsen">
     <link rel="icon" href="images/favicon.ico">
     <meta property="og:title" content="Home">
     <meta property="og:site_name" content="F'burg VG Tourney">
     <meta property="og:type" content="website">
-    <meta property="og:description" content="Image sources for the Fredericksburg Video Game Tournament website">
+    <meta property="og:description" content="Home page for the Fredericksburg Video Game Tournament website">
     <meta property="og:image" content="https://jcbcnielsen.github.io/wdd231/final/images/open-graph.webp">
-    <meta property="og:url" content="https://jcbcnielsen.github.io/wdd231/final/sources.html">
+    <meta property="og:url" content="https://jcbcnielsen.github.io/wdd231/final/index.html">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Press+Start+2P&display=swap" rel="stylesheet">
@@ -21,9 +21,9 @@
     <link id="colorMode" rel="stylesheet" href="styles/darkmode.css">
     <link rel="stylesheet" href="styles/base-small.css">
     <link rel="stylesheet" href="styles/base-large.css">
-    <link rel="stylesheet" href="styles/sources.css">
+    <link rel="stylesheet" href="styles/games.css">
     <script src="scripts/basic-functions.js" defer></script>
-    <script src="scripts/sources-list.js" type="module"></script>
+    <script src="scripts/games-list.js" type="module"></script>
 </head>
 
 <body>
@@ -31,27 +31,16 @@
         <h2></h2>
         <button id="menu" aria-label="menu"></button>
         <nav>
-            <a class="here" href="index.html">Home</a>
-            <a href="games.html">Games</a>
+            <a href="index.html">Home</a>
+            <a class="here" href="games.html">Games</a>
             <a href="signup.html">Sign Up</a>
         </nav>
     </header>
 
     <main>
-        <h1>Sources</h1>
+        <h1>Games</h1>
         <button id="colorButton" title="Light Mode"></button>
-        <div id="notice" class="card">
-            <h2>About Games and Images Used</h2>
-            <p>All outside content included in this site is only used for educational purposes under fair use. All images were altered from their source by a combination of cropping, scaling, and merging for sizing and to ensure the title was visible. I do not own nor claim ownership of any of the outside trademarked or copyrighted content included in this website.</p>
-        </div>
-        <div id="deck">
-            <div class="card">
-                <img src="images/hero-small.webp" alt="SNES Controller">
-                <h2>SNES</h2>
-                <p class="pub">The Super Nintendo Entertainment System is a product of: Nintendo</p>
-                <a href="https://www.pexels.com/photo/person-holding-white-snes-controller-776092/">Image source</a>
-            </div>
-        </div>
+        <div id="deck"></div>
     </main>
 
     <footer>
