--- a/final/index.html
+++ b/final/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,11 +23,13 @@
     <link rel="stylesheet" href="styles/base-large.css">
     <link rel="stylesheet" href="styles/home.css">
     <script src="scripts/basic-functions.js" defer></script>
+    <script src="scripts/featured-games.js" type="module"></script>
 </head>
+
 <body>
     <header>
         <h2></h2>
-        <button id="menu"></button>
+        <button id="menu" aria-label="menu"></button>
         <nav>
             <a class="here" href="index.html">Home</a>
             <a href="games.html">Games</a>
@@ -40,10 +43,30 @@
         <img src="images/hero-small.webp" alt="Super Nintendo Controller">
     </picture>
     <main>
-        <h1> Home</h1>
+        <h1>Home</h1>
         <button id="colorButton" title="Light Mode"></button>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quibusdam at iure ipsam ad, minus blanditiis reprehenderit. Quae aperiam consectetur ea iste sunt repellendus deserunt quibusdam, quasi facilis impedit eveniet sequi, repudiandae eius odio aut. Esse sed ratione tenetur et quaerat libero voluptate maiores, cum reprehenderit explicabo, temporibus sunt corporis eius! Quos accusantium nulla modi omnis exercitationem, fugiat quo deleniti, doloremque repudiandae suscipit ea sit sunt ut rerum saepe adipisci necessitatibus porro labore at ad tempora quae illum itaque praesentium? Magni aperiam quae doloremque a reprehenderit amet est quos quaerat. Quo tenetur minus est quae maxime nemo voluptas excepturi atque!</p>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus, quia nihil! Deleniti obcaecati saepe rerum dicta animi, ipsum voluptate quam eaque assumenda eveniet porro tenetur iste facilis accusantium ab, laboriosam blanditiis aperiam ea nesciunt! Doloribus non quos, beatae voluptatum sint error iusto minus, deserunt ex totam, repellat itaque ipsum est eligendi nisi? Harum laudantium provident earum unde, repellendus repellat neque aliquam nihil velit odit pariatur veritatis amet quam reprehenderit eveniet alias assumenda necessitatibus reiciendis temporibus ea? Incidunt maiores quos optio, nostrum provident ut laborum quibusdam inventore eligendi neque nihil necessitatibus repellendus ipsa dolorem sit expedita eius nemo sapiente alias tempore.</p>
+        <div id="deck">
+            <div id="welcome" class="card">
+                <h2>Welcome!</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam deleniti, molestias ducimus vero vitae minus cum atque est ipsam quam, quas non vel delectus a voluptas, dolore explicabo ea sunt. Quidem vitae quisquam voluptatibus unde hic repellendus aspernatur ratione nulla amet vel obcaecati incidunt veniam ad accusantium beatae, recusandae adipisci.</p>
+            </div>
+            <div id="signup" class="card">
+                <h2>Join the Action!</h2>
+                <form method="get" action="signup.html">
+                    <label>First Name:<input type="text" id="fname" name="fname"
+                        title="Your first/given name" autocomplete="given-name"></label>
+                    <label>Last Name:<input type="text" id="lname" name="lname"
+                        title="Your last/family name" autocomplete="family-name"></label>
+                    <label>Email:<input type="email" id="email" name="email"
+                        title="Your email" autocomplete="email"></label>
+                    <button type="submit">Sign Up!</button>
+                </form>
+            </div>
+            <div id="feature" class="card">
+                <h2>Featured Games</h2>
+                <div id="spotlight"></div>
+            </div>
+        </div>
     </main>
 
     <footer>
@@ -55,12 +78,15 @@
             <p>(555) 513 - 7428</p>
         </div>
         <div id="socialLinks">
-            <a href="https://youtube.com"><img id="ytIcon" src="images/yt-light.svg" alt="YouTube Logo from Icons8" loading="lazy"></a>
-            <a href="https://x.com"><img id="xIcon" src="images/x-light.svg" alt="X/Twitter Logo from Icons8" loading="lazy"></a>
-            <a href="https://facebook.com"><img id="fbIcon" src="images/fb-light.svg" alt="Facebook Logo from Icons8" loading="lazy"></a>
+            <a href="https://youtube.com"><img id="ytIcon" src="images/yt-light.svg" alt="YouTube Logo from Icons8"
+                    loading="lazy"></a>
+            <a href="https://x.com"><img id="xIcon" src="images/x-light.svg" alt="X/Twitter Logo from Icons8"
+                    loading="lazy"></a>
+            <a href="https://facebook.com"><img id="fbIcon" src="images/fb-light.svg" alt="Facebook Logo from Icons8"
+                    loading="lazy"></a>
             <p>Icons from <a href="https://icons8.com">Icons8</a></p>
         </div>
-        <div>
+        <div id="miscInfo">
             <p>WDD231 Final Class Project</p>
             <p>Jacob Nielsen</p>
             <p>&copy;<span id="currentYear"></span> Fredericksburg Video Game Tournament</p>
@@ -69,4 +95,5 @@
         </div>
     </footer>
 </body>
+
 </html>
