--- a/final/sources.html
+++ b/final/sources.html
@@ -46,7 +46,7 @@
         </div>
         <div id="deck">
             <div class="card">
-                <img src="images/hero-small.webp" alt="SNES Controller">
+                <img class="wide" src="images/hero-small.webp" alt="SNES Controller">
                 <h2>SNES</h2>
                 <p class="pub">The Super Nintendo Entertainment System is a product of: Nintendo</p>
                 <a href="https://www.pexels.com/photo/person-holding-white-snes-controller-776092/">Image source</a>
