Week 6 Edit F - improved signup page

--- a/final/signup.html
+++ b/final/signup.html
@@ -76,6 +76,9 @@
                 <dialog id="review"></dialog>
             </fieldset>
         </form>
+        <div id="upcoming" class="card">
+            <h2>Upcoming Tournaments</h2>
+        </div>
     </main>
 
     <footer>
