Week 6 Edit G - clean up, mostly javascript

--- a/final/games.html
+++ b/final/games.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | F'burg VG Tourney</title>
-    <meta name="description" content="Home page for the Fredericksburg Video Game Tournament website">
+    <meta name="description" content="Games list for the Fredericksburg Video Game Tournament website">
     <meta name="author" content="Jacob Nielsen">
     <link rel="icon" href="images/favicon.ico">
-    <meta property="og:title" content="Home">
+    <meta property="og:title" content="Games">
     <meta property="og:site_name" content="F'burg VG Tourney">
     <meta property="og:type" content="website">
-    <meta property="og:description" content="Home page for the Fredericksburg Video Game Tournament website">
+    <meta property="og:description" content="Games list for the Fredericksburg Video Game Tournament website">
     <meta property="og:image" content="https://jcbcnielsen.github.io/wdd231/final/images/open-graph.webp">
-    <meta property="og:url" content="https://jcbcnielsen.github.io/wdd231/final/index.html">
+    <meta property="og:url" content="https://jcbcnielsen.github.io/wdd231/final/games.html">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Press+Start+2P&display=swap" rel="stylesheet">
@@ -22,7 +22,6 @@
     <link rel="stylesheet" href="styles/base-small.css">
     <link rel="stylesheet" href="styles/base-large.css">
     <link rel="stylesheet" href="styles/games.css">
-    <script src="scripts/basic-functions.js" defer></script>
     <script src="scripts/games-list.js" type="module"></script>
 </head>
 
@@ -65,7 +64,7 @@
             <p>Jacob Nielsen</p>
             <p>&copy;<span id="currentYear"></span> Fredericksburg Video Game Tournament</p>
             <p id="lastModified">Last Modified: </p>
-            <a href="sources.html">Sources for images used</a>
+            <a href="sources.html">Attributions and Sources</a>
         </div>
     </footer>
 </body>
