--- a/final/index.html
+++ b/final/index.html
@@ -22,7 +22,6 @@
     <link rel="stylesheet" href="styles/base-small.css">
     <link rel="stylesheet" href="styles/base-large.css">
     <link rel="stylesheet" href="styles/home.css">
-    <script src="scripts/basic-functions.js" defer></script>
     <script src="scripts/featured-games.js" type="module"></script>
 </head>
 
@@ -96,7 +95,7 @@
             <p>Jacob Nielsen</p>
             <p>&copy;<span id="currentYear"></span> Fredericksburg Video Game Tournament</p>
             <p id="lastModified">Last Modified: </p>
-            <a href="sources.html">Sources for images used</a>
+            <a href="sources.html">Attributions and Sources</a>
         </div>
     </footer>
 </body>
