--- a/final/sources.html
+++ b/final/sources.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Image sources for the Fredericksburg Video Game Tournament website">
     <meta name="author" content="Jacob Nielsen">
     <link rel="icon" href="images/favicon.ico">
-    <meta property="og:title" content="Home">
+    <meta property="og:title" content="Sources">
     <meta property="og:site_name" content="F'burg VG Tourney">
     <meta property="og:type" content="website">
     <meta property="og:description" content="Image sources for the Fredericksburg Video Game Tournament website">
@@ -22,7 +22,6 @@
     <link rel="stylesheet" href="styles/base-small.css">
     <link rel="stylesheet" href="styles/base-large.css">
     <link rel="stylesheet" href="styles/sources.css">
-    <script src="scripts/basic-functions.js" defer></script>
     <script src="scripts/sources-list.js" type="module"></script>
 </head>
 
@@ -31,7 +30,7 @@
         <h2></h2>
         <button id="menu" aria-label="menu"></button>
         <nav>
-            <a class="here" href="index.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="games.html">Games</a>
             <a href="signup.html">Sign Up</a>
         </nav>
@@ -76,7 +75,7 @@
             <p>Jacob Nielsen</p>
             <p>&copy;<span id="currentYear"></span> Fredericksburg Video Game Tournament</p>
             <p id="lastModified">Last Modified: </p>
-            <a href="sources.html">Sources for images used</a>
+            <a href="sources.html">Attributions and Sources</a>
         </div>
     </footer>
 </body>
