Week 6 Edit H - added video demo

--- a/final/index.html
+++ b/final/index.html
@@ -80,6 +80,7 @@
             <p>Fredericksburg, VA</p>
             <p>contact@fvgt.com</p>
             <p>(555) 513 - 7428</p>
+            <a href="https://www.loom.com/share/4e149caf87cc43d18a20cc30e81457f5?sid=8b3cd7de-f054-4ddd-8561-81ad4852c314">Video Demonstration</a>
         </div>
         <div id="socialLinks">
             <a href="https://youtube.com"><img id="ytIcon" src="images/yt-light.svg" alt="YouTube Logo from Icons8"
